# nomad-docs-chatbot

./: .gitignore  README.md  pyproject.toml
data/embeddings/: chroma.sqlite3
src/nomad_docs_chatbot/: embeddings.py  rag.py
src/nomad_nlp_engine/: rag.py
tests/: test_rag.py
