[build-system]
requires = ["setuptools<69.3.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = 'nomad-nlp-engine'
description = 'NLP engine for creating NOMAD queries.'
authors = [
    { name = "NOMAD Laboratory", email = 'markus.scheidgen@physik.hu-berlin.de' },
]
dynamic = ["version"]
license = { text = "Apache-2.0" }
requires-python = ">=3.9"

dependencies = [
    'langchain',
    'langchain-nomic',
    'langchain_community',
    'tiktoken',
    'langchainhub',
    'chromadb',
    'langchain',
    'langgraph',
    'gpt4all',
]

[project.urls]
homepage = "https://nomad-lab.eu/"
documentation = "https://nomad-lab.eu/prod/v1/docs"
repository = 'https://gitlab.mpcdf.mpg.de/nomad-lab/nomad-FAIR'

[project.optional-dependencies]
dev = [
    'pytest'
]

[tool.ruff]
include = ["nomad/*.py", "tests/*.py"]
exclude = ["dependencies"]

# Same as Black.
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "W", # pycodestyle
    "PL", # pylint
]
ignore = [
    "E501", # Line too long ({width} > {limit} characters)
    "E701", # Multiple statements on one line (colon)
    "E731", # Do not assign a lambda expression, use a def
    "E402", # Module level import not at top of file
    "PLR0911", # Too many return statements
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments in function definition
    "PLR0915", # Too many statements
    "PLR2004", # Magic value used instead of constant
    "PLW0603", # Using the global statement
    "PLW2901", # redefined-loop-name
    "PLR1714", # consider-using-in
    "PLR5501", # else-if-used
]
fixable = ["ALL"]

[tool.ruff.format]
# use single quotes for strings.
quote-style = "single"

# indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.setuptools.packages.find]
where = [
    "src",
]
